[package]
name = "mun_compiler_daemon"
version = "0.3.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"
description = "Functionality for continuously monitoring Mun source files for changes and triggering recompilation"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
anyhow = "1.0.31"
mun_codegen = { version = "=0.3.0", path = "../mun_codegen" }
mun_compiler = { version = "=0.3.0", path = "../mun_compiler" }
project = { version = "=0.1.0", path = "../mun_project", package="mun_project" }
hir = { version = "=0.3.0", path = "../mun_hir", package="mun_hir" }
vfs = { version = "=0.1.0", path = "../mun_vfs", package="mun_vfs" }
notify = "4.0"
ctrlc = "3.1"
log = "0.4"
console = "0.14.1"
indicatif = "0.15.0"
crossbeam-channel = "0.5.0"
threadpool="1.8.1"
